[package]
name = "naolametric"
version = "0.1.0"
edition = "2021"
description = "LaMetric Time app for Naolib (Nantes public transport) real-time arrivals"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
