[package]
name = "naolametric"
version = "0.1.0"
edition = "2021"
description = "LaMetric Time app for Naolib (Nantes public transport) real-time arrivals"

[dependencies]
# Serveur HTTP minimaliste
tiny_http = { version = "0.12", default-features = false }

# Client HTTP ultra-minimal avec rustls
minreq = { version = "2", features = ["https-rustls"] }

# Sérialisation JSON minimale
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

# Décodage URL
urlencoding = "2"

[profile.release]
opt-level = "z"      # Optimise pour la taille
lto = "fat"          # Link-Time Optimization maximale
codegen-units = 1    # Meilleure optimisation
panic = "abort"      # Pas de unwinding
strip = true         # Supprime symboles

[profile.release.build-override]
opt-level = "z"
