[package]
name = "naolametric"
version = "0.1.0"
edition = "2024"
description = "LaMetric Time app for Naolib (Nantes public transport) real-time arrivals"

[dependencies]
# Serveur HTTP minimaliste
tiny_http = { version = "0.12", default-features = false }

# Client HTTP ultra-minimal avec rustls
minreq = { version = "2", features = ["https-rustls"] }

# Sérialisation JSON minimale
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

# Décodage URL
urlencoding = "2"

[profile.release]
opt-level = "z"      # Optimise pour la taille
lto = "fat"          # Link-Time Optimization maximale
codegen-units = 1    # Meilleure optimisation
panic = "abort"      # Pas de unwinding
strip = true         # Supprime symboles

[lints.clippy]
cargo        = { priority = -1, level = "deny" }
complexity   = { priority = -1, level = "deny" }
correctness  = { priority = -1, level = "deny" }
nursery      = { priority = -1, level = "deny" }
pedantic     = { priority = -1, level = "deny" }
perf         = { priority = -1, level = "deny" }
restriction  = { priority = -1, level = "deny" }
style        = { priority = -1, level = "deny" }
suspicious   = { priority = -1, level = "deny" }

# We allow the following clippy lints
blanket_clippy_restriction_lints    = "allow"   # We want clippy in extreme mode so yes, we want this ;)
implicit_return                     = "allow"   # We want to use implicit return
question_mark_used                  = "allow"   # We want to be able to use the question mark operator
ref_patterns                        = "allow"   # We want to be able to use 'ref' when pattern matching
single_call_fn                      = "allow"   # We prefer to have shorter functions even if they are only used once
option_if_let_else                  = "allow"   # Can be more readable

# Allowed lints in this specific project
missing_docs_in_private_items       = "allow"
arbitrary_source_item_ordering      = "allow"
non_ascii_literal                   = "allow"
absolute_paths                      = "allow"
print_stderr                        = "allow"
expect_used                         = "allow"
shadow_reuse                        = "allow"
min_ident_chars                     = "allow"
arithmetic_side_effects             = "allow"
let_underscore_untyped              = "allow"
let_underscore_must_use             = "allow"
significant_drop_tightening         = "allow"
cargo_common_metadata               = "allow"
unwrap_used                         = "allow"
pattern_type_mismatch               = "allow"
if_not_else                         = "allow"
